  .dat files instead of MySQL Database.
  
commands.conf   : Removed config settings for the 3 commands mentioned above
commands.cpp/.h : Commented out the 3 mentioned commands
adddoor.cpp     : Commented out entire file
delworlditem.cpp: Commented out entire file
addworlditem.cpp: Commented out entire file

====================
Namikon; 24.12.2006 01:30 GMT+1
----------
[rev. 62-63]
<internal version: 0.1.8 Dev - 0.1.10 Dev>

- Added experimental char warp-aura and char disappear packets to all warp-commands
  (Worked while testing, but not after implementation into the commands)
- Worked on Chatsystem: Localchat 99% working. Localchat is now limited to a small area around the player
  (However, the chat is sent over TCP, like all other packets. It should be UDP, but this isnt working
  for some reason. If anyone finds out why, tell us please)
- Added Developercommand "@test". It has no fixed function, and is not configureable by config file.
  Devs can easily add stuff there to test various things.
- Removed adddoor, delworlditem and addworlditem completely from SVN, they're not needed anymore
- And a few things i cant remember -.-

====================
Namikon; 25.12.2006 00:24 GMT+1
----------
[rev. 64]
<internal version: 0.1.11 Dev>

- Fixed Blacksync issue when logging in
- Disabled position update on warpto and recall commands. It's not possible at the moment to
  force the client to update the charposition.
  
====================
Namikon; 26.12.2006 22:33 GMT+1
----------
[rev. 65]
<internal version: 0.1.13 Dev>

- Added UDPManager functions to connection_udp. Keeps the last 20 important UDP messages in a queue, for
  possible resend after a OOO notice by the client
- Finally fixed the warpcircle and charvanish! The mentioned commands in Rev 62-63 now work as announced
- UDP_ID and all related stuff moved to connection_udp. Will be more controlled in the future from there