@@ -22,11 +22,11 @@
 /*
 
 	udp_udp0x1f.cpp - decoder classes for UDP 0x13x03x1f messages
-  
+
 	CREATION: 6 Sep 2006 Hammag
 
 	MODIFIED:
-	REASON: - 
+	REASON: -
 
 */
 
@@ -39,56 +39,57 @@
 #include "udp_subskill.h"
 #include "udp_chat.h"
 #include "udp_useobject.h"
+#include "udp_appartment.h"
 
 /**** PUdp0x1f ****/
 
 PUdp0x1f::PUdp0x1f(PMsgDecodeData* nDecodeData) : PUdpMsgAnalyser(nDecodeData)
 {
   nDecodeData->mName << "/0x1f";
-} 
+}
 
 PUdpMsgAnalyser* PUdp0x1f::Analyse()
 {
   PUdpMsgAnalyser* nextAnalyser = NULL;
-  mDecodeData->mState = DECODE_MORE;    
+  mDecodeData->mState = DECODE_MORE;
   u8 MsgType = mDecodeData->mMessage->U8Data(mDecodeData->Sub0x13Start + 7);
   u8 MsgSubType = mDecodeData->mMessage->U8Data(mDecodeData->Sub0x13Start + 8);
 
   switch(MsgType)
   {
     case 0x02:
-    {       
+    {
       nextAnalyser = new PUdpCharJump(mDecodeData);
       break;
     }
     case 0x17:
-    {  
+    {
       nextAnalyser = new PUdpUseObject(mDecodeData);
       break;
-    }    
+    }
     case 0x1b:
-    {       
+    {
       nextAnalyser = new PUdpChatLocal(mDecodeData);
       break;
     }
     /* case 0x1e:  // Inventory item move
-    {       
+    {
       nextAnalyser = new PUdpXXXX(mDecodeData);
       break;
     }
     case 0x1f: // Slot use
-    {       
+    {
       nextAnalyser = new PUdpXXXX(mDecodeData);
       break;
     } */
     case 0x22:
-    {       
+    {
       nextAnalyser = new PUdpCharExitChair(mDecodeData);
       break;
     }
     case 0x25:
     {
-      mDecodeData->mName << "/0x25"; 
+      mDecodeData->mName << "/0x25";
       if (MsgSubType == 0x04) // Is it sure this is a requirement ?
       {
         nextAnalyser = new PUdpSubskillInc(mDecodeData);
@@ -101,12 +102,12 @@ PUdpMsgAnalyser* PUdp0x1f::Analyse()
       break;
     }
     case 0x33:
-    {    
+    {
       nextAnalyser = new PUdpChatListAdd(mDecodeData);
       break;
     }
     case 0x38:
-    {       
+    {
       nextAnalyser = new PUdpAppartmentAccess(mDecodeData);
       break;
     }
@@ -116,32 +117,37 @@ PUdpMsgAnalyser* PUdp0x1f::Analyse()
       break;
     }
     case 0x3b:
-    {       
+    {
       nextAnalyser = new PUdpChatGlobal(mDecodeData);
       break;
     }
     case 0x3d:
     {
-      mDecodeData->mName << "/0x3d"; 
+      mDecodeData->mName << "/0x3d";
       switch(MsgSubType)
       {
         case 0x02:
-        {       
+        {
           nextAnalyser = new PUdpAddGenrepToList(mDecodeData);
           break;
         }
         case 0x03:
-        {       
+        {
           nextAnalyser = new PUdpAptGRZoning(mDecodeData);
           break;
         }
         case 0x04:
-        {       
+        {
           nextAnalyser = new PUdpGenrepZoning(mDecodeData);
           break;
         }
+        case 0x0a:
+        {
+          nextAnalyser = new PUdpAptLocInfo(mDecodeData);
+          break;
+        }
         case 0x0f:
-        {       
+        {
           nextAnalyser = new PUdpVhcUse(mDecodeData);
           break;
         }
@@ -149,12 +155,12 @@ PUdpMsgAnalyser* PUdp0x1f::Analyse()
         {
           mDecodeData->mUnknownType = MsgSubType;
           break;
-        } 
+        }
       }
       break;
     }
     case 0x4c:
-    {       
+    {
       nextAnalyser = new PUdpChatChannels(mDecodeData);
       break;
     }
@@ -162,9 +168,9 @@ PUdpMsgAnalyser* PUdp0x1f::Analyse()
     {
       mDecodeData->mUnknownType = MsgType;
       break;
-    }         
+    }
   }
-  
+
   if (! nextAnalyser)
   {
     nextAnalyser = new PUdpMsgUnknown(mDecodeData);
